--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
          <h1>Наші напої</h1>
             <h2>Прохолодний зелений чай</h2>
          <p class="greentea">
-            <img src="../Lab1/images/green.jpg" alt="Зелений чай"><br>
+            <img src="../images/green.jpg" alt="Зелений чай"><br>
             Цей напій містить величезну кількість вітамінів і
             мінерали і корисний для здоров'я через
             Склад: Зелений чай, ромашки квіти та корінь імбиру.
          </p>
          <h2>Охолоджений малиновий сироп</h2>
          <p class="raspberry">
-            <img src="../Lab1/images/lightblue.jpg" alt="Lightblue"><br>
+            <img src="../images/lightblue.jpg" alt="Lightblue"><br>
             Поєднання малинового соку та лимонного сорго, цедра
             цитрусові та плоди ляпаса, це м'яке
             Напій оновлюватиме та уточнить вашу думку.
          </p>
          <h2>Чудовий напій з чорниці</h2>
          <p class="blueberry">
-            <img src="../Lab1/images/blue.jpg" alt="Blue"><br>
+            <img src="../images/blue.jpg" alt="Blue"><br>
             Екстракти чорниці та вишні додаються до трав'яного чаю
             З бузини вони негайно приведуть вас до стану миру
             І блаженство.
          </p>
          <h2>Вибух з журавлинної антиоксиди</h2>
          <p>
-            <img src="../Lab1/images/red.jpg" alt="Red"><br>
+            <img src="../images/red.jpg" alt="Red"><br>
             Відрегулювати енергію насиченого вітаміну напоєм
             Зі смаком журавлини та гібік.
          </p>
